--- a/front/index.html
+++ b/front/index.html
@@ -1,17 +1,68 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
-    <title>Traffic Visualization</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Traffic Visualizer</title>
+
+    <!-- Styles -->
     <link rel="stylesheet" type="text/css" href="static/styles.css">
-    <link rel="icon" type="image/png" href="static/pipet.jpg">
+
+    <!-- Icons -->
+    <link rel="icon" type="image/x-icon" href="static/pipet.jpg">
+
+    <!-- External Scripts -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>
+    <script src="https://d3js.org/d3.v7.min.js"></script>
 </head>
+
 <body>
-    <div id="info">
-        <h3>Live Traffic</h3>
-        <div id="stats"></div>
-    </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/controls/OrbitControls.js"></script>
-    <script src="globe.js"></script>
+    <!-- Main container -->
+    <main class="traffic-visualizer">
+        <!-- Left panel section -->
+        <section class="left-panel-container" aria-label="Traffic visualization controls">
+            <!-- Control panel -->
+            <div class="control-panel">
+                <h3>Visualization Controls</h3>
+
+                <!-- Toggle control group -->
+                <div class="control-group">
+                    <label class="toggle-label" for="rotation-toggle">
+                        <input type="checkbox" id="rotation-toggle" checked aria-label="Toggle auto rotation">
+                        <span>Auto Rotation</span>
+                    </label>
+                </div>
+            </div>
+
+            <!-- Bar chart section -->
+            <section class="bar-chart" id="bar-chart" aria-label="Most active countries visualization">
+                <header class="chart-header">Most Active Countries</header>
+                <svg role="img" aria-label="Bar chart of most active countries"></svg>
+            </section>
+
+            <!-- Data table section -->
+            <section class="data-table" aria-label="Recent packages data">
+                <header class="table-header">Recent Packages</header>
+
+                <!-- Table container -->
+                <div class="table-container">
+                    <table>
+                        <thead>
+                            <tr>
+                                <th>IP Address</th>
+                                <th>Country</th>
+                            </tr>
+                        </thead>
+                        <tbody id="package-table-body"></tbody>
+                    </table>
+                </div>
+            </section>
+        </section>
+
+        <!-- JavaScript files -->
+        <script type="module" src="index.js"></script>
+    </main>
 </body>
+
 </html>
